<resources>
    <string name="app_name">HealingPath</string>
    <string name="btn_login">Login</string>
    <string name="or">OR</string>
    <string name="login_as_guest">Login as Guest</string>
    <string name="login_with_google">Login with Google</string>
    <string name="login_with_facebook">Login with Facebook</string>
    <string name="register_prompt">Don\'t have an account? <b>Register</b></string>
    <string name="register_text">Register</string>
    <string name="app_logo">App Logo</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="date_of_birth">Date of Birth</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="register">Register</string>
    <string name="login_prompt">Already have an account? Login</string>
    <string name="login_text">Login!</string>
    <string name="add_injury">Add Injury</string>
    <string name="title">Title</string>
    <string name="description">Description</string>
    <string name="cancel">Cancel</string>
    <string name="save">Save</string>
    <string name="your_injuries">Your Injuries</string>
    <string name="notes">Notes</string>
    <string name="reminders">Reminders</string>
    <string name="log">Log</string>
    <string name="pain_level">Pain Level: %1$s</string>
    <string name="pain_level2">Pain Level:</string>

    <string name="set_reminder">Set Reminder</string>
    <string name="name">Full Name</string>
    <string name="logout">Logout</string>
    <string name="date">Date</string>
    <string name="note_content">Note content</string>
    <string name="mood">Mood: %1$s</string>
    <string name="mood2">Mood: </string>
    <string name="time">Time</string>
    <string name="choose_language">Choose your language</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="forgot_password">"Forgot password? "</string>
    <string name="default_web_client_id">739562432257-kh0c2oafp28ld8khd53ojk6kchguifvl.apps.googleusercontent.com</string>
    <string name="welcomeMsg">Welcome to Healing Path</string>
    <string name="writeNote">Write your note here...</string>
    <string name="injury">Injuries</string>
    <string name="calendar">Calendar</string>
    <string name="profile">Profile</string>


    <string-array name="mood_options">
        <item>🙂 Neutral</item>
        <item>😊 Happy</item>
        <item>😢 Sad</item>
        <item>😠 Frustrated</item>
        <item>🤕 In pain</item>
    </string-array>
</resources>