<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:gravity="center"
    android:orientation="vertical"
    android:padding="24dp"
    tools:context=".activities.LoginActivity">

    <!-- Logo at the top -->
    <ImageView
        android:id="@+id/logoImageView"
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:layout_marginBottom="24dp"
        android:contentDescription="App Logo"
        android:src="@drawable/logotransp" />

    <!-- Email input -->
    <EditText
        android:id="@+id/editTextEmail"
        style="@style/AppEditText"
        android:layout_marginBottom="8dp"
        android:hint="@string/email"
        android:inputType="textEmailAddress" />

    <!-- Password input -->
    <EditText
        android:id="@+id/editTextPassword"
        style="@style/AppEditText"
        android:hint="@string/password"
        android:inputType="textPassword" />

    <!-- Forgot Password  -->
    <TextView
        android:id="@+id/textViewForgotPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end"
        android:layout_marginTop="8dp"
        android:clickable="true"
        android:focusable="true"
        android:text="@string/forgot_password"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="14sp" />

    <!-- Login button -->
    <Button
        android:id="@+id/buttonLogin"
        style="@style/AppButton"
        android:layout_marginTop="16dp"
        android:text="@string/btn_login" />

    <!-- OR separator -->
    <TextView
        android:id="@+id/textViewOr"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:layout_marginBottom="12dp"
        android:text="@string/or"
        android:textColor="@android:color/darker_gray"
        android:textSize="14sp"
        android:textStyle="bold" />

    <!-- Login as Guest -->
    <Button
        android:id="@+id/buttonLoginAsGuest"
        style="@style/AppButton"
        android:text="@string/login_as_guest" />

    <!-- Social login buttons -->
    <Button
        android:id="@+id/buttonLoginWithGoogle"
        style="@style/AppButton"
        android:layout_marginTop="16dp"
        android:text="@string/login_with_google" />


    <Button
        android:id="@+id/buttonLoginWithFacebook"
        style="@style/AppButton"
        android:layout_marginTop="16dp"
        android:text="@string/login_with_facebook" />

    <!-- Register link -->
    <TextView
        android:id="@+id/textViewRegister"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="24dp"
        android:clickable="true"
        android:focusable="true"
        android:text="@string/don_t_have_an_account_register"
        android:textColor="@color/colorPrimaryDark"/>


</LinearLayout>
